file esten updated

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 							</p>
 							<div class="action">
 								<a class="btn btn-primary"
-									href="https://raw.githubusercontent.com/khawarafzal/khawarafzal.github.io/master/doc/_resume-khawar.pdf"
+									href="https://raw.githubusercontent.com/khawarafzal/khawarafzal.github.io/master/doc/_resume-khawar.docx"
 									target="_top" role="button">Download CV</a>
 								<a class="btn btn-success" href="#contact" role="button">Contact Me</a>
 							</div>
