styling update of CV

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="#home">
-						<img alt="Brand" src="images/logo.png" />
+						<img alt="Brand" src="images/favicon.png" />
 					</a>
 				</div>
 
