styling update of CV

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<div class="text-block">
 					<img class="logo" src="images/logo.png" alt="logo" />
 					<h1>
-						<!-- I'm Jawad -->
+						<!-- I'm Khawar -->
 						<strong>Front-end Developer</strong>
 					</h1>
 					<h2 class="cd-headline clip is-full-width">
@@ -119,7 +119,7 @@
 							<b class="is-hidden">WordPress</b>
 							<b class="is-hidden">Youtube</b>
 							<b class="is-hidden">Video Editing</b>
-							<b class="is-hidden">Photography</b>
+							<b class="is-hidden">Photoshop</b>
 						</span>
 					</h2>
 					<p>
@@ -706,14 +706,14 @@
 					<li>
 						<figure>
 							<div class="media">
-								<img src="images/portfolio/ktechsol.jpg" alt="portfolio" />
+								<img src="images/portfolio/invision.jpg" alt="portfolio" />
 							</div>
 							<figcaption>
-								<h3>KTech SOl</h3>
+								<h3>Graphic Designs</h3>
 								<a class="cta" href="#">
 									<i class="fas fa-camera"></i>
 								</a>
-								<a class="cta" target="_blank" href="http://www.ktechsol.com/">
+								<a class="cta" target="_blank" href="https://projects.invisionapp.com/share/RXOSCD8V6B7#/screens">
 									<i class="fas fa-link"></i>
 								</a>
 							</figcaption>
@@ -867,7 +867,7 @@
 					</div>
 					<div class="col-sm-3">
 						<div class="contact email">
-							<a class="cta" target="_top" href="mailto:mkhawarafzal@gmail.com?Subject=Hello%20Jawad">
+							<a class="cta" target="_top" href="mailto:mkhawarafzal@gmail.com?Subject=Hello%20Khawar">
 								<i class="far fa-envelope"></i>
 								mkhawarafzal@gmail.com
 							</a>
