my styling update

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 		<section id="home" class="welcome">
 			<div class="container">
 				<div class="text-block">
-					<img class="logo" src="images/logo.png" alt="logo" />
-					<h1>
+					<img class="logo lef-to-rig" src="images/logo.png" alt="logo" />
+					<h1 class="rig-to-lef">
 						<!-- I'm Khawar -->
-						<strong>Front-end Developer</strong>
+						<strong>UX/UI + Front-end Developer</strong>
 					</h1>
 					<h2 class="cd-headline clip is-full-width">
 						<span>Expert in</span>
@@ -112,14 +112,16 @@
 							<b class="is-visible">HTML/HTML5</b>
 							<b class="is-hidden">CSS/CSS3</b>
 							<b class="is-hidden">SASS/LESS</b>
-							<b class="is-hidden">Twitter Bootstrap</b>
 							<b class="is-hidden">UX/UI Development</b>
-							<b class="is-hidden">PSD Conversion</b>
-							<b class="is-hidden">Basic JavaScript/jQuery</b>
-							<b class="is-hidden">WordPress</b>
-							<b class="is-hidden">Youtube</b>
-							<b class="is-hidden">Video Editing</b>
+							<b class="is-hidden">Twitter Bootstrap</b>
+							<b class="is-hidden">WordPress Theming</b>
+							<b class="is-hidden">Drupal Theming</b>
 							<b class="is-hidden">Photoshop</b>
+							<b class="is-hidden">PSD Conversion</b>
+							<b class="is-hidden">jQuery</b>
+							<b class="is-hidden">Basic JavaScript</b>
+							<b class="is-hidden">Youtube Channel Handling</b>
+							<b class="is-hidden">Video Editing</b>
 						</span>
 					</h2>
 					<p>
