--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
 		<section id="home" class="welcome">
 			<div class="container">
 				<div class="text-block">
-					<img class="logo lef-to-rig" src="images/logo.png" alt="logo" />
+					<img class="logo " src="images/logo.png" alt="logo" />
 					<h1 class="rig-to-lef">
 						<!-- I'm Khawar -->
 						<strong>UX/UI + Front-end Developer</strong>
 					</h1>
-					<h2 class="cd-headline clip is-full-width">
+					<h2 class="cd-headline clip is-full-width lef-to-rig">
 						<span>Expert in</span>
 						<span class="cd-words-wrapper">
 							<b class="is-visible">HTML/HTML5</b>
@@ -130,7 +130,7 @@
 						a focus on usability. Enthusiastic about life, coding, learing new
 						tech/skills and innovation.
 					</p>
-					<ul class="list-inline social">
+					<ul class="list-inline social fadin">
 						<li class="linkedin">
 							<a class="cta" target="_blank" href="https://www.linkedin.com/in/khawar-afzal-7798918b">
 								<i class="fab fa-linkedin-in"></i>
@@ -833,9 +833,7 @@
 							</div>
 							<p>
 								Khawar Afzal is a talented front-end developer and great to work with him. Not only is he an amazing designer, 
-								but he has ingenious web skills HTML5, CSS3, Bootstrap, Drupal theme development, PSD to HTML.
-							</p>
-							<p>
+								but he has ingenious web skills HTML5, CSS3, Bootstrap, Drupal theme development, PSD to HTML.</br>
 								Khawar is very innovative and always looking for new solutions and fresh ideas that can advance his knowledge 
 								to exceed his employer’s expectations and goals. Khawar is a fun person to work with, and is always helpful 
 								and insightful. He is a passionate designer and always seems to have great awareness of new creative strategies 
