--- a/index.html
+++ b/index.html
@@ -286,6 +286,19 @@
 
 		<!-- skills -->
 		<section id="skills" class="skills">
+			<div class="ani-icon">
+				<div>  <img src="images/css-3.png" height="40px" width="40px"></img></div>
+				<div><img src="images/html5.png" height="40px" width="40px"></img></div>
+				<div>  <img src="images/bootstrap-4.png" height="40px" width="40px" ></img></div>
+				<div><img  src="images/wordpress.png" height="40px" width="40px"></img></div>
+				<div> <img src="images/photoshop.png" height="40px" width="40px"></img></div>
+				<div><img src="images/html-coding.png" height="40px" width="40px"></div>
+				<div><img src="images/github.png" height="40px" width="40px"></div>
+				<div><img src="images/iconfinder_jquery_282807.png" height="40px" width="40px"></div> 
+				<div><img src="images/play-button.png" height="40px" width="40px"></div> 
+				<div><img src="images/youtube.png" height="40px" width="40px"></div> 
+				<div><img src="images/www.png" height="40px" width="40px"></div> 
+			</div>
 			<div class="container">
 				<div class="section-title">
 					<h2>Skills</h2>
