--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 							<b class="is-hidden">PSD Conversion</b>
 							<b class="is-hidden">jQuery</b>
 							<b class="is-hidden">Basic JavaScript</b>
-							<b class="is-hidden">Youtube Channel Handling</b>
+							<b class="is-hidden">Youtube Handling</b>
 							<b class="is-hidden">Video Editing</b>
 						</span>
 					</h2>
