--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 							<b class="is-hidden">Video Editing</b>
 						</span>
 					</h2>
+					<h3 class="rig-to-lef">+ 6 Years Experience</h3>
 					<p>
 						I am from planet with a passion of Web, Web Application and
 						Interactive UI/UX. I specialise in standards compliant websites with
@@ -139,12 +140,6 @@
 						<li class="skype">
 							<a class="cta" target="_top" href="skype:mkhawarafzal?chat">
 								<i class="fab fa-skype"></i>
-							</a>
-						</li>
-						<li class="facebook">
-							<a class="cta" target="_blank"
-								href="https://www.facebook.com/mkhawarafzal">
-								<i class="fab fa-facebook-f"></i>
 							</a>
 						</li>
 						<li class="git">
@@ -168,7 +163,7 @@
 				<div class="panel panel-default who">
 					<div class="panel-body">
 						<div class="text-center">
-							<div class="dp">
+							<div class="dp floating-style">
 								<img src="images/dp.jpg" alt="Profile Picture" />
 							</div>
 							<h2>Who am i</h2>
@@ -493,6 +488,14 @@
 									</div>
 									<div class="col-sm-6">
 										<div class="skill-bar">
+											<strong>Drupal/Strapi/Core PHP (Theme Design)</strong>
+											<div class="progress">
+												<div class="progress-bar progress-bar-success" role="progressbar"
+													aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"
+													style="width: 85%;"></div>
+											</div>
+										</div>
+										<div class="skill-bar">
 											<strong>PHP, MySQL</strong>
 											<div class="progress">
 												<div class="progress-bar progress-bar-success" role="progressbar"
@@ -735,6 +738,10 @@
 						</figure>
 					</li>
 				</ul>
+				<!-- Button trigger modal -->
+				<button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
+					More Projects
+				</button>
 			</div>
 		</section>
 
@@ -915,12 +922,6 @@
 									<i class="fab fa-skype"></i>
 								</a>
 							</li>
-							<li class="facebook">
-								<a class="cta" target="_blank"
-									href="https://www.facebook.com/">
-									<i class="fab fa-facebook-f"></i>
-								</a>
-							</li>
 							<li class="git">
 								<a class="cta" target="_blank" href="https://github.com/khawarafzal/">
 									<i class="fab fa-github"></i>
@@ -939,6 +940,120 @@
 					Copyright &copy; 2021. All rights reserved | Developed by
 					<a class="cta" href="https://www.linkedin.com/in/" target="_blank">Muhammad Khawar</a>
 				</p>
+			</div>
+
+			<!-- Modal -->
+			<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					</div>
+					<div class="modal-body">	
+						<ul class="portfolio">
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/topuniversities.jpg" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Top Universities</h3>
+										<a class="cta" href="#">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://www.topuniversities.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/topmba.jpg" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Top MBA</h3>
+										<a class="cta" href="#">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://www.topmba.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/libereka.jpg" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Libereka</h3>
+										<a class="cta" href="#">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://www.libereka.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/mymovein.jpg" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Movein 4</h3>
+										<a class="cta" href="#">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://poilet.mymovein.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/qs.jpg" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>QS - Quacquarelli Symonds</h3>
+										<a class="cta" href="#">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://www.qs.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/invision.jpg" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Graphic Designs</h3>
+										<a class="cta" href="#">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://projects.invisionapp.com/share/RXOSCD8V6B7#/screens">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+						</ul>
+					</div>
+				</div>
+				</div>
 			</div>
 		</footer>
 
