styling push with new images

--- a/index.html
+++ b/index.html
@@ -643,11 +643,11 @@
 					<li>
 						<figure>
 							<div class="media">
-								<img src="images/portfolio/topuniversities.jpg" alt="portfolio" />
+								<img src="images/portfolio/topuniversities.png" alt="portfolio" />
 							</div>
 							<figcaption>
 								<h3>Top Universities</h3>
-								<a class="cta" href="#">
+								<a class="cta" href="images/portfolio/topuniversities.png">
 									<i class="fas fa-camera"></i>
 								</a>
 								<a class="cta" target="_blank" href="https://www.topuniversities.com/">
@@ -659,11 +659,11 @@
 					<li>
 						<figure>
 							<div class="media">
-								<img src="images/portfolio/topmba.jpg" alt="portfolio" />
+								<img src="images/portfolio/topmba.png" alt="portfolio" />
 							</div>
 							<figcaption>
 								<h3>Top MBA</h3>
-								<a class="cta" href="#">
+								<a class="cta" href="images/portfolio/topmba.png">
 									<i class="fas fa-camera"></i>
 								</a>
 								<a class="cta" target="_blank" href="https://www.topmba.com/">
@@ -675,11 +675,11 @@
 					<li>
 						<figure>
 							<div class="media">
-								<img src="images/portfolio/libereka.jpg" alt="portfolio" />
+								<img src="images/portfolio/libereka.png" alt="portfolio" />
 							</div>
 							<figcaption>
 								<h3>Libereka</h3>
-								<a class="cta" href="#">
+								<a class="cta" href="images/portfolio/libereka.png">
 									<i class="fas fa-camera"></i>
 								</a>
 								<a class="cta" target="_blank" href="https://www.libereka.com/">
@@ -691,11 +691,11 @@
 					<li>
 						<figure>
 							<div class="media">
-								<img src="images/portfolio/mymovein.jpg" alt="portfolio" />
+								<img src="images/portfolio/mymovein.png" alt="portfolio" />
 							</div>
 							<figcaption>
 								<h3>Movein 4</h3>
-								<a class="cta" href="#">
+								<a class="cta" href="images/portfolio/mymovein.png">
 									<i class="fas fa-camera"></i>
 								</a>
 								<a class="cta" target="_blank" href="https://poilet.mymovein.com/">
@@ -707,11 +707,11 @@
 					<li>
 						<figure>
 							<div class="media">
-								<img src="images/portfolio/qs.jpg" alt="portfolio" />
+								<img src="images/portfolio/qs.png" alt="portfolio" />
 							</div>
 							<figcaption>
 								<h3>QS - Quacquarelli Symonds</h3>
-								<a class="cta" href="#">
+								<a class="cta" href="images/portfolio/qs.png">
 									<i class="fas fa-camera"></i>
 								</a>
 								<a class="cta" target="_blank" href="https://www.qs.com/">
@@ -720,18 +720,17 @@
 							</figcaption>
 						</figure>
 					</li>
-					
 					<li>
 						<figure>
 							<div class="media">
-								<img src="images/portfolio/invision.jpg" alt="portfolio" />
+								<img src="images/portfolio/steorts.png" alt="portfolio" />
 							</div>
 							<figcaption>
-								<h3>Graphic Designs</h3>
-								<a class="cta" href="#">
+								<h3>Steorts</h3>
+								<a class="cta" href="images/portfolio/steorts.png">
 									<i class="fas fa-camera"></i>
 								</a>
-								<a class="cta" target="_blank" href="https://projects.invisionapp.com/share/RXOSCD8V6B7#/screens">
+								<a class="cta" target="_blank" href="https://steorts.com/">
 									<i class="fas fa-link"></i>
 								</a>
 							</figcaption>
@@ -956,14 +955,14 @@
 							<li>
 								<figure>
 									<div class="media">
-										<img src="images/portfolio/topuniversities.jpg" alt="portfolio" />
+										<img src="images/portfolio/AmericanS.png" alt="portfolio" />
 									</div>
 									<figcaption>
-										<h3>Top Universities</h3>
-										<a class="cta" href="#">
+										<h3>AmericanSundayPlate</h3>
+										<a class="cta" href="images/portfolio/AmericanS.png">
 											<i class="fas fa-camera"></i>
 										</a>
-										<a class="cta" target="_blank" href="https://www.topuniversities.com/">
+										<a class="cta" target="_blank" href="http://americansundayplate.com">
 											<i class="fas fa-link"></i>
 										</a>
 									</figcaption>
@@ -972,14 +971,14 @@
 							<li>
 								<figure>
 									<div class="media">
-										<img src="images/portfolio/topmba.jpg" alt="portfolio" />
+										<img src="images/portfolio/1001V.png" alt="portfolio" />
 									</div>
 									<figcaption>
-										<h3>Top MBA</h3>
-										<a class="cta" href="#">
+										<h3>1001 VoucherCodes</h3>
+										<a class="cta" href="images/portfolio/1001V.png">
 											<i class="fas fa-camera"></i>
 										</a>
-										<a class="cta" target="_blank" href="https://www.topmba.com/">
+										<a class="cta" target="_blank" href="https://www.1001vouchercodes.co.uk/">
 											<i class="fas fa-link"></i>
 										</a>
 									</figcaption>
@@ -988,14 +987,14 @@
 							<li>
 								<figure>
 									<div class="media">
-										<img src="images/portfolio/libereka.jpg" alt="portfolio" />
+										<img src="images/portfolio/getbonedry.png" alt="portfolio" />
 									</div>
 									<figcaption>
-										<h3>Libereka</h3>
-										<a class="cta" href="#">
+										<h3>Getbonedry</h3>
+										<a class="cta" href="images/portfolio/getbonedry.png">
 											<i class="fas fa-camera"></i>
 										</a>
-										<a class="cta" target="_blank" href="https://www.libereka.com/">
+										<a class="cta" target="_blank" href="https://getbonedry.com/">
 											<i class="fas fa-link"></i>
 										</a>
 									</figcaption>
@@ -1004,30 +1003,14 @@
 							<li>
 								<figure>
 									<div class="media">
-										<img src="images/portfolio/mymovein.jpg" alt="portfolio" />
+										<img src="images/portfolio/woodrefinisher.png" alt="portfolio" />
 									</div>
 									<figcaption>
-										<h3>Movein 4</h3>
-										<a class="cta" href="#">
+										<h3>Woodrefinisher</h3>
+										<a class="cta" href="images/portfolio/woodrefinisher.png">
 											<i class="fas fa-camera"></i>
 										</a>
-										<a class="cta" target="_blank" href="https://poilet.mymovein.com/">
-											<i class="fas fa-link"></i>
-										</a>
-									</figcaption>
-								</figure>
-							</li>
-							<li>
-								<figure>
-									<div class="media">
-										<img src="images/portfolio/qs.jpg" alt="portfolio" />
-									</div>
-									<figcaption>
-										<h3>QS - Quacquarelli Symonds</h3>
-										<a class="cta" href="#">
-											<i class="fas fa-camera"></i>
-										</a>
-										<a class="cta" target="_blank" href="https://www.qs.com/">
+										<a class="cta" target="_blank" href="http://pro.woodrefinisher.net/">
 											<i class="fas fa-link"></i>
 										</a>
 									</figcaption>
@@ -1037,11 +1020,203 @@
 							<li>
 								<figure>
 									<div class="media">
-										<img src="images/portfolio/invision.jpg" alt="portfolio" />
+										<img src="images/portfolio/cleanwithcloud.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Cleanwithcloud</h3>
+										<a class="cta" href="images/portfolio/cleanwithcloud.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://cleanwithcloud.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/healingintuitive.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Healingintuitive</h3>
+										<a class="cta" href="images/portfolio/healingintuitive.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://healingintuitive.net/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/puremoldfree.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Puremoldfree</h3>
+										<a class="cta" href="images/portfolio/puremoldfree.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://puremoldfree.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/blog-trainerswarehouse.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Blog-Trainerswarehouse</h3>
+										<a class="cta" href="images/portfolio/blog-trainerswarehouse.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://blog.trainerswarehouse.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/easecarpetcleaning.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Easecarpetcleaning</h3>
+										<a class="cta" href="images/portfolio/easecarpetcleaning.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://easecarpetcleaning.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/utahdisasterteam.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Utahdisasterteam</h3>
+										<a class="cta" href="images/portfolio/utahdisasterteam.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://utahdisasterteam.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/edwincompany.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Edwincompany</h3>
+										<a class="cta" href="images/portfolio/edwincompany.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://edwincompany.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/abqexterminator.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Abqexterminator</h3>
+										<a class="cta" href="images/portfolio/abqexterminator.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://www.abqexterminator.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/trainerswarehouse.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Trainerswarehouse</h3>
+										<a class="cta" href="images/portfolio/trainerswarehouse.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://trainerswarehouse.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/japosid.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Japosid</h3>
+										<a class="cta" href="images/portfolio/japosid.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://www.japosid.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/beautyandbloom.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Beautyandbloom</h3>
+										<a class="cta" href="images/portfolio/beautyandbloom.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://www.beautyandbloom.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/careprovider.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Careprovider</h3>
+										<a class="cta" href="images/portfolio/careprovider.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://careprovider.org/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/invision.png" alt="portfolio" />
 									</div>
 									<figcaption>
 										<h3>Graphic Designs</h3>
-										<a class="cta" href="#">
+										<a class="cta" href="https://projects.invisionapp.com/share/RXOSCD8V6B7#/screens">
 											<i class="fas fa-camera"></i>
 										</a>
 										<a class="cta" target="_blank" href="https://projects.invisionapp.com/share/RXOSCD8V6B7#/screens">
