--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 					<h2 class="cd-headline clip is-full-width lef-to-rig">
 						<span>Expert in</span>
 						<span class="cd-words-wrapper">
-							<b class="is-visible">HTML/HTML5</b>
+							<b class="is-visible">Angular/Angular js</b>
+							<b class="is-hidden">HTML/HTML5</b>
 							<b class="is-hidden">CSS/CSS3</b>
 							<b class="is-hidden">SASS/LESS</b>
 							<b class="is-hidden">UX/UI Development</b>
@@ -124,10 +125,11 @@
 							<b class="is-hidden">Video Editing</b>
 						</span>
 					</h2>
+					<h3 class="rig-to-lef">+ 6 Years Experience</h3>
 					<p>
 						I am from planet with a passion of Web, Web Application and
-						Interactive UI/UX. I specialise in standards compliant websites with
-						a focus on usability. Enthusiastic about life, coding, learing new
+						Interactive UI/UX. I specialize in standards compliant websites with
+						a focus on usability. Enthusiastic about life, coding, learning new
 						tech/skills and innovation.
 					</p>
 					<ul class="list-inline social fadin">
@@ -139,12 +141,6 @@
 						<li class="skype">
 							<a class="cta" target="_top" href="skype:mkhawarafzal?chat">
 								<i class="fab fa-skype"></i>
-							</a>
-						</li>
-						<li class="facebook">
-							<a class="cta" target="_blank"
-								href="https://www.facebook.com/mkhawarafzal">
-								<i class="fab fa-facebook-f"></i>
 							</a>
 						</li>
 						<li class="git">
@@ -168,7 +164,7 @@
 				<div class="panel panel-default who">
 					<div class="panel-body">
 						<div class="text-center">
-							<div class="dp">
+							<div class="dp floating-style">
 								<img src="images/dp.jpg" alt="Profile Picture" />
 							</div>
 							<h2>Who am i</h2>
@@ -179,7 +175,7 @@
 								UX, UI & Product interface designing, and also prototyping using Photoshop, XD & invisionapp & Zipline.
 							</p>
 							<p>
-								I’ve also specialized as Graphics Designer The main categories are the following:  Website Templates, 
+								I’ve also specialized as Graphics Designer the main categories are the following:  Website Templates, 
 								Website Prototyping, Logos, Flayer, Corporate Business Cards Design, The Tools I am familiar with 
 								(Photoshop, Illustrator, Adobe XD, Adobe After Effect, Adobe Premier & Filmora for Video Editing and Mixing.
 							</p>
@@ -347,15 +343,6 @@
 								</div>
 
 								<div class="skill-bar">
-									<strong><span>80%</span> Confidence</strong>
-									<div class="progress">
-										<div class="progress-bar progress-bar-success" role="progressbar"
-											aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-											style="width: 80%;"></div>
-									</div>
-								</div>
-
-								<div class="skill-bar">
 									<strong><span>85%</span> Leadership</strong>
 									<div class="progress">
 										<div class="progress-bar progress-bar-success" role="progressbar"
@@ -372,6 +359,23 @@
 							<div class="panel-body">
 								<h3>Framework/Library</h3>
 
+								<div class="skill-bar">
+									<strong><span>80%</span> Angular, Angular js</strong>
+									<div class="progress">
+										<div class="progress-bar progress-bar-success" role="progressbar"
+											aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
+											style="width: 80%;"></div>
+									</div>
+								</div>
+
+								<div class="skill-bar">
+									<strong><span>50%</span> React JS</strong>
+									<div class="progress">
+										<div class="progress-bar progress-bar-success" role="progressbar"
+											aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
+											style="width: 50%;"></div>
+									</div>
+								</div>
 								<div class="skill-bar">
 									<strong><span>95%</span> Twitter Bootstrap</strong>
 									<div class="progress">
@@ -398,25 +402,6 @@
 											style="width: 90%;"></div>
 									</div>
 								</div>
-
-								<div class="skill-bar">
-									<strong><span>30%</span> Angular, Angular CLI</strong>
-									<div class="progress">
-										<div class="progress-bar progress-bar-success" role="progressbar"
-											aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"
-											style="width: 30%;"></div>
-									</div>
-								</div>
-
-								<div class="skill-bar">
-									<strong><span>30%</span> React JS</strong>
-									<div class="progress">
-										<div class="progress-bar progress-bar-success" role="progressbar"
-											aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"
-											style="width: 30%;"></div>
-									</div>
-								</div>
-
 
 							</div>
 						</div>
@@ -492,6 +477,14 @@
 										</div>
 									</div>
 									<div class="col-sm-6">
+										<div class="skill-bar">
+											<strong>Drupal/Strapi/Core PHP (Theme Design)</strong>
+											<div class="progress">
+												<div class="progress-bar progress-bar-success" role="progressbar"
+													aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"
+													style="width: 85%;"></div>
+											</div>
+										</div>
 										<div class="skill-bar">
 											<strong>PHP, MySQL</strong>
 											<div class="progress">
@@ -640,11 +633,11 @@
 					<li>
 						<figure>
 							<div class="media">
-								<img src="images/portfolio/topuniversities.jpg" alt="portfolio" />
+								<img src="images/portfolio/topuniversities.png" alt="portfolio" />
 							</div>
 							<figcaption>
 								<h3>Top Universities</h3>
-								<a class="cta" href="#">
+								<a class="cta" href="images/portfolio/topuniversities.png">
 									<i class="fas fa-camera"></i>
 								</a>
 								<a class="cta" target="_blank" href="https://www.topuniversities.com/">
@@ -656,11 +649,11 @@
 					<li>
 						<figure>
 							<div class="media">
-								<img src="images/portfolio/topmba.jpg" alt="portfolio" />
+								<img src="images/portfolio/topmba.png" alt="portfolio" />
 							</div>
 							<figcaption>
 								<h3>Top MBA</h3>
-								<a class="cta" href="#">
+								<a class="cta" href="images/portfolio/topmba.png">
 									<i class="fas fa-camera"></i>
 								</a>
 								<a class="cta" target="_blank" href="https://www.topmba.com/">
@@ -672,11 +665,11 @@
 					<li>
 						<figure>
 							<div class="media">
-								<img src="images/portfolio/libereka.jpg" alt="portfolio" />
+								<img src="images/portfolio/libereka.png" alt="portfolio" />
 							</div>
 							<figcaption>
 								<h3>Libereka</h3>
-								<a class="cta" href="#">
+								<a class="cta" href="images/portfolio/libereka.png">
 									<i class="fas fa-camera"></i>
 								</a>
 								<a class="cta" target="_blank" href="https://www.libereka.com/">
@@ -688,11 +681,11 @@
 					<li>
 						<figure>
 							<div class="media">
-								<img src="images/portfolio/mymovein.jpg" alt="portfolio" />
+								<img src="images/portfolio/mymovein.png" alt="portfolio" />
 							</div>
 							<figcaption>
 								<h3>Movein 4</h3>
-								<a class="cta" href="#">
+								<a class="cta" href="images/portfolio/mymovein.png">
 									<i class="fas fa-camera"></i>
 								</a>
 								<a class="cta" target="_blank" href="https://poilet.mymovein.com/">
@@ -704,11 +697,11 @@
 					<li>
 						<figure>
 							<div class="media">
-								<img src="images/portfolio/qs.jpg" alt="portfolio" />
+								<img src="images/portfolio/qs.png" alt="portfolio" />
 							</div>
 							<figcaption>
 								<h3>QS - Quacquarelli Symonds</h3>
-								<a class="cta" href="#">
+								<a class="cta" href="images/portfolio/qs.png">
 									<i class="fas fa-camera"></i>
 								</a>
 								<a class="cta" target="_blank" href="https://www.qs.com/">
@@ -717,24 +710,27 @@
 							</figcaption>
 						</figure>
 					</li>
-					
 					<li>
 						<figure>
 							<div class="media">
-								<img src="images/portfolio/invision.jpg" alt="portfolio" />
+								<img src="images/portfolio/steorts.png" alt="portfolio" />
 							</div>
 							<figcaption>
-								<h3>Graphic Designs</h3>
-								<a class="cta" href="#">
+								<h3>Steorts</h3>
+								<a class="cta" href="images/portfolio/steorts.png">
 									<i class="fas fa-camera"></i>
 								</a>
-								<a class="cta" target="_blank" href="https://projects.invisionapp.com/share/RXOSCD8V6B7#/screens">
+								<a class="cta" target="_blank" href="https://steorts.com/">
 									<i class="fas fa-link"></i>
 								</a>
 							</figcaption>
 						</figure>
 					</li>
 				</ul>
+				<!-- Button trigger modal -->
+				<button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
+					More Projects
+				</button>
 			</div>
 		</section>
 
@@ -915,12 +911,6 @@
 									<i class="fab fa-skype"></i>
 								</a>
 							</li>
-							<li class="facebook">
-								<a class="cta" target="_blank"
-									href="https://www.facebook.com/">
-									<i class="fab fa-facebook-f"></i>
-								</a>
-							</li>
 							<li class="git">
 								<a class="cta" target="_blank" href="https://github.com/khawarafzal/">
 									<i class="fab fa-github"></i>
@@ -939,6 +929,296 @@
 					Copyright &copy; 2021. All rights reserved | Developed by
 					<a class="cta" href="https://www.linkedin.com/in/" target="_blank">Muhammad Khawar</a>
 				</p>
+			</div>
+
+			<!-- Modal -->
+			<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					</div>
+					<div class="modal-body">	
+						<ul class="portfolio">
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/AmericanS.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>AmericanSundayPlate</h3>
+										<a class="cta" href="images/portfolio/AmericanS.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="http://americansundayplate.com">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/1001V.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>1001 VoucherCodes</h3>
+										<a class="cta" href="images/portfolio/1001V.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://www.1001vouchercodes.co.uk/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/getbonedry.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Getbonedry</h3>
+										<a class="cta" href="images/portfolio/getbonedry.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://getbonedry.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/woodrefinisher.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Woodrefinisher</h3>
+										<a class="cta" href="images/portfolio/woodrefinisher.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="http://pro.woodrefinisher.net/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/cleanwithcloud.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Cleanwithcloud</h3>
+										<a class="cta" href="images/portfolio/cleanwithcloud.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://cleanwithcloud.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/healingintuitive.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Healingintuitive</h3>
+										<a class="cta" href="images/portfolio/healingintuitive.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://healingintuitive.net/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/puremoldfree.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Puremoldfree</h3>
+										<a class="cta" href="images/portfolio/puremoldfree.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://puremoldfree.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/blog-trainerswarehouse.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Blog-Trainerswarehouse</h3>
+										<a class="cta" href="images/portfolio/blog-trainerswarehouse.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://blog.trainerswarehouse.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/easecarpetcleaning.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Easecarpetcleaning</h3>
+										<a class="cta" href="images/portfolio/easecarpetcleaning.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://easecarpetcleaning.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/utahdisasterteam.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Utahdisasterteam</h3>
+										<a class="cta" href="images/portfolio/utahdisasterteam.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://utahdisasterteam.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/edwincompany.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Edwincompany</h3>
+										<a class="cta" href="images/portfolio/edwincompany.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://edwincompany.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/abqexterminator.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Abqexterminator</h3>
+										<a class="cta" href="images/portfolio/abqexterminator.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://www.abqexterminator.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/trainerswarehouse.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Trainerswarehouse</h3>
+										<a class="cta" href="images/portfolio/trainerswarehouse.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://trainerswarehouse.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/japosid.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Japosid</h3>
+										<a class="cta" href="images/portfolio/japosid.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://www.japosid.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/beautyandbloom.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Beautyandbloom</h3>
+										<a class="cta" href="images/portfolio/beautyandbloom.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://www.beautyandbloom.com/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/careprovider.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Careprovider</h3>
+										<a class="cta" href="images/portfolio/careprovider.png">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://careprovider.org/">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+							<li>
+								<figure>
+									<div class="media">
+										<img src="images/portfolio/invision.png" alt="portfolio" />
+									</div>
+									<figcaption>
+										<h3>Graphic Designs</h3>
+										<a class="cta" href="https://projects.invisionapp.com/share/RXOSCD8V6B7#/screens">
+											<i class="fas fa-camera"></i>
+										</a>
+										<a class="cta" target="_blank" href="https://projects.invisionapp.com/share/RXOSCD8V6B7#/screens">
+											<i class="fas fa-link"></i>
+										</a>
+									</figcaption>
+								</figure>
+							</li>
+						</ul>
+					</div>
+				</div>
+				</div>
 			</div>
 		</footer>
 
