--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 							</div>
 							<h2>Who am i</h2>
 							<p>
-								My name is Muhammad Khawar Afzal. I am working in ZEPTO Systems as a Front-end Developer. 
-								I am serving the organization with a key role of modern Front-end Developer, Agile (Jira) 
+								My name is Muhammad Khawar Afzal. I am working in Invictus Solutions as a Sr. Front-end Developer. 
+								I am serving the organization with a key role of modern Front-end Developer, Agile
 								is integrated here for managing large scale products. I am also able to work in 
 								UX, UI & Product interface designing, and also prototyping using Photoshop, XD & invisionapp & Zipline.
 							</p>
