--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
 							</p>
 							<div class="action">
 								<a class="btn btn-primary"
-									href="https://raw.githubusercontent.com/khawarafzal/khawarafzal.github.io/master/_khawar-resume.docx"
+									href="_khawar-resume.docx"
+									
 									target="_top" role="button">Download CV</a>
 								<a class="btn btn-success" href="#contact" role="button">Contact Me</a>
 							</div>
@@ -559,6 +560,31 @@
 					<li>
 						<div class="year">
 							<span>Present</span>
+							<span>2021</span>
+						</div>
+						<div class="detail">
+							<h4>INVICTUS SOLUTIONS</h4>
+							<strong>SR.Front-end Developer</strong>
+							<ul class="list-unstyled">
+								<li>Created and optimized complex user flows.</li>
+								<li>
+									Developed intuitive and engaging experiences for the product.
+								</li>
+								<li>
+									Produced high-quality user interfaces and visual designs from
+									concept to launch on web and mobile applications.
+								</li>
+								<li>Experience with Agile environment and Scrum Works.</li>
+							</ul>
+							<p>
+								I am currently serving INVICTUS SOLUTIONS as a key Post of Sr.Front-end developer. Here I am working 
+								in Angular / Vue projects, also using Extended Bootstrap 5 with SASS, Responsive, Adaptive, and Fluid Designs. Mobile first Technique.
+							</p>
+						</div>
+					</li>
+					<li>
+						<div class="year">
+							<span>2021</span>
 							<span>2014</span>
 						</div>
 						<div class="detail">
@@ -576,7 +602,7 @@
 								<li>Experience with Agile environment and Scrum Works.</li>
 							</ul> -->
 							<p>
-								I am currently serving ZEPTO Systems as a key Post of web developer. Here I am working 
+								I served ZEPTO Systems as a key Post of Front-end Developer. Here I am working 
 								in WordPress / Drupal projects, also using Extended Bootstrap 5 with SASS, Pure (framework), 
 								Angular, JavaScript, Responsive, Adaptive, and Fluid Designs. Mobile first Technique.
 							</p>
@@ -612,8 +638,8 @@
 
 							<p>I served InicSol as Graphic Designer and Front-end developer. 
 								I learnt Advanced development using Core php, MySQL, phpMyAdmin, 
-								And Modern website development using HTML5, CSS3, Bootstrap, Custom 
-								JavaScript writing, jQuery.
+								And Modern website development using HTML, CSS, Bootstrap, Custom 
+								JavaScript, jQuery.
 							</p>
 						</div>
 					</li>
